--- a/java2_Raechan4/src/view/home/home.fxml
+++ b/java2_Raechan4/src/view/home/home.fxml
@@ -22,13 +22,13 @@
             <Label layoutX="54.0" layoutY="619.0" prefHeight="15.0" prefWidth="224.0" text="고객센터" textFill="WHITE" />
             <Label layoutX="54.0" layoutY="652.0" prefHeight="15.0" prefWidth="226.0" text="기부하기" textFill="WHITE" />
             <Label layoutX="53.0" layoutY="311.0" text="게시판" textFill="WHITE" />
-            <Label layoutX="53.0" layoutY="362.0" text="게임" textFill="WHITE" />
-            <Line endX="111.0" endY="552.5" layoutX="93.0" layoutY="-233.0" startX="2.0" startY="552.5" stroke="WHITE" strokeWidth="2.0" />
-            <Line endX="139.0" endY="552.5" layoutX="62.0" layoutY="-183.0" startX="20.0" startY="552.5" stroke="WHITE" strokeWidth="2.0" />
-            <Label fx:id="lblboard" layoutX="44.0" layoutY="327.0" onMouseClicked="#accboard" text="자유게시판" textFill="WHITE" />
-            <Label fx:id="lblproduct" layoutX="142.0" layoutY="327.0" onMouseClicked="#accproduct" text="중고거래" textFill="WHITE" />
-            <Label fx:id="hallway" layoutX="42.0" layoutY="376.0" onMouseClicked="#hallinfo" text="복도둘러보기" textFill="WHITE" />
-            <Label layoutX="124.0" layoutY="376.0" text="탄알피하기" textFill="WHITE" />
+            <Label layoutX="53.0" layoutY="469.0" text="게임" textFill="WHITE" />
+            <Line endX="164.0" endY="552.5" layoutX="93.0" layoutY="-233.0" startX="2.0" startY="552.5" stroke="WHITE" strokeWidth="2.0" />
+            <Line endX="139.0" endY="552.5" layoutX="62.0" layoutY="-76.0" startX="20.0" startY="552.5" stroke="WHITE" strokeWidth="2.0" />
+            <Label fx:id="lblboard" layoutX="34.0" layoutY="330.0" onMouseClicked="#accboard" text="자유게시판" textFill="WHITE" />
+            <Label fx:id="lblproduct1" layoutX="36.0" layoutY="381.0" onMouseClicked="#accproduct1" text="게임기" textFill="WHITE" />
+            <Label fx:id="hallway" layoutX="42.0" layoutY="483.0" onMouseClicked="#hallinfo" text="복도둘러보기" textFill="WHITE" />
+            <Label layoutX="124.0" layoutY="483.0" text="탄알피하기" textFill="WHITE" />
             <Label layoutX="111.0" layoutY="255.0" text="회원" textFill="WHITE" />
             <Line endX="181.0" endY="553.0" layoutX="81.0" layoutY="-306.0" startX="-59.0" startY="553.0" stroke="WHITE" strokeWidth="2.0" />
             <Label fx:id="lbldelete" layoutX="26.0" layoutY="272.0" onMouseClicked="#delete" text="탈퇴하기" textFill="WHITE" />
@@ -38,14 +38,19 @@
             <Line endX="260.0" endY="554.0" layoutX="3.0" layoutY="-260.0" startX="20.0" startY="554.0" stroke="WHITE" strokeWidth="2.0" />
             <Line endX="172.0" endY="543.0" layoutX="91.0" layoutY="-296.0" startX="172.0" startY="590.0" stroke="WHITE" strokeWidth="2.0" />
             <Line endX="172.0" endY="543.0" layoutX="-150.0" layoutY="-296.0" startX="172.0" startY="590.0" stroke="WHITE" strokeWidth="2.0" />
-            <Line endX="102.0" endY="543.5" layoutX="103.0" layoutY="-223.0" startX="102.0" startY="569.0" stroke="WHITE" strokeWidth="2.0" />
-            <Line endX="115.0" endY="553.0" layoutX="89.0" layoutY="-206.0" startX="-63.0" startY="553.0" stroke="WHITE" strokeWidth="2.0" />
-            <Line endX="102.0" endY="543.5" layoutX="-76.0" layoutY="-222.0" startX="102.0" startY="569.0" stroke="WHITE" strokeWidth="2.0" />
+            <Line endX="102.0" endY="543.5" layoutX="155.0" layoutY="-223.0" startX="102.0" startY="642.0" stroke="WHITE" strokeWidth="2.0" />
+            <Line endX="167.0" endY="553.0" layoutX="90.0" layoutY="-133.0" startX="-63.0" startY="553.0" stroke="WHITE" strokeWidth="2.0" />
+            <Line endX="102.0" endY="543.5" layoutX="-76.0" layoutY="-222.0" startX="102.0" startY="641.0" stroke="WHITE" strokeWidth="2.0" />
             <Line endX="24.0" endY="552.5" layoutX="25.0" layoutY="-232.0" startX="2.0" startY="552.5" stroke="WHITE" strokeWidth="2.0" />
-            <Line endX="102.0" endY="543.5" layoutX="101.0" layoutY="-173.0" startX="102.0" startY="569.0" stroke="WHITE" strokeWidth="2.0" />
-            <Line endX="116.0" endY="553.0" layoutX="87.0" layoutY="-156.0" startX="-63.0" startY="553.0" stroke="WHITE" strokeWidth="2.0" />
-            <Line endX="102.0" endY="543.5" layoutX="-78.0" layoutY="-172.0" startX="102.0" startY="569.0" stroke="WHITE" strokeWidth="2.0" />
-            <Line endX="24.0" endY="552.5" layoutX="22.0" layoutY="-183.0" startX="2.0" startY="552.5" stroke="WHITE" strokeWidth="2.0" />
+            <Line endX="102.0" endY="543.5" layoutX="101.0" layoutY="-66.0" startX="102.0" startY="569.0" stroke="WHITE" strokeWidth="2.0" />
+            <Line endX="116.0" endY="553.0" layoutX="87.0" layoutY="-49.0" startX="-63.0" startY="553.0" stroke="WHITE" strokeWidth="2.0" />
+            <Line endX="102.0" endY="543.5" layoutX="-78.0" layoutY="-65.0" startX="102.0" startY="569.0" stroke="WHITE" strokeWidth="2.0" />
+            <Line endX="24.0" endY="552.5" layoutX="22.0" layoutY="-76.0" startX="2.0" startY="552.5" stroke="WHITE" strokeWidth="2.0" />
+            <Label fx:id="lblproduct2" layoutX="154.0" layoutY="381.0" onMouseClicked="#accproduct2" text="슈팅게임팩" textFill="WHITE" />
+            <Label fx:id="lblproduct3" layoutX="35.0" layoutY="397.0" onMouseClicked="#accproduct3" text="스포츠게임팩" textFill="WHITE" />
+            <Label fx:id="lblproduct4" layoutX="154.0" layoutY="397.0" onMouseClicked="#accproduct4" text="액션게임팩" textFill="WHITE" />
+            <Line endX="139.0" endY="553.0" layoutX="87.0" layoutY="-199.0" startX="-51.0" startY="553.0" stroke="WHITE" strokeWidth="2.0" />
+            <Label layoutX="34.0" layoutY="360.0" prefHeight="15.0" prefWidth="110.0" text="중고거래게시판" textFill="WHITE" />
          </children>
       </AnchorPane>
    </left>
