--- a/java2_Raechan4/src/view/product/product.fxml
+++ b/java2_Raechan4/src/view/product/product.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
@@ -27,5 +28,7 @@
             <VBox fx:id="vbox" prefHeight="546.0" prefWidth="869.0" />
          </content>
       </ScrollPane>
+      <TextField fx:id="txtsearch" layoutX="646.0" layoutY="111.0" prefHeight="29.0" prefWidth="183.0" promptText="제품명" />
+      <Button fx:id="btnsearch" layoutX="842.0" layoutY="111.0" mnemonicParsing="false" onAction="#search" prefHeight="29.0" prefWidth="83.0" style="-fx-background-color: #00ccd3;" text="검색" textFill="WHITE" />
    </children>
 </AnchorPane>
