--- a/java2_Raechan4/src/view/product/productview.fxml
+++ b/java2_Raechan4/src/view/product/productview.fxml
@@ -58,5 +58,10 @@
           <TableColumn prefWidth="75.0" text="C2" />
         </columns>
       </TableView>
+      <Button fx:id="btnactivation" layoutX="686.0" layoutY="111.0" mnemonicParsing="false" onAction="#activation" prefHeight="39.0" prefWidth="215.0" style="-fx-background-color: #0873ff;" text="판매완료" textFill="WHITE">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
