--- a/java2_Raechan4/src/view/chatting.fxml
+++ b/java2_Raechan4/src/view/chatting.fxml
@@ -2,6 +2,8 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -33,21 +35,38 @@
             </LinearGradient>
          </textFill>
       </Label>
-      <Button fx:id="btnconnect" layoutX="84.0" layoutY="150.0" mnemonicParsing="false" onAction="#connect" prefHeight="51.0" prefWidth="528.0" text="채팅창 입장" />
+      <Button fx:id="btnconnect" layoutX="84.0" layoutY="150.0" mnemonicParsing="false" onAction="#connect" prefHeight="51.0" prefWidth="528.0" style="-fx-background-color: #00ccd3;" text="채팅방 입장" textFill="WHITE" />
       <TextArea fx:id="txtcontent" layoutX="84.0" layoutY="219.0" prefHeight="333.0" prefWidth="528.0" />
       <Button fx:id="btnsend" layoutX="507.0" layoutY="571.0" mnemonicParsing="false" onAction="#send" prefHeight="62.0" prefWidth="105.0" text="전송" />
-      <TextField fx:id="txtmsg" layoutX="84.0" layoutY="571.0" prefHeight="62.0" prefWidth="409.0" />
-      <TextField fx:id="txtname" layoutX="700.0" layoutY="305.0" prefHeight="42.0" prefWidth="222.0" />
-      <TextField fx:id="txtip" layoutX="700.0" layoutY="392.0" prefHeight="42.0" prefWidth="222.0" />
-      <TextField fx:id="txtport" layoutX="700.0" layoutY="476.0" prefHeight="42.0" prefWidth="222.0" />
-      <Label layoutX="707.0" layoutY="370.0" text="ip 주소" textFill="WHITE" />
-      <Label layoutX="707.0" layoutY="454.0" text="포트번호" textFill="WHITE" />
-      <Label layoutX="707.0" layoutY="282.0" text="채팅방 닉네임" textFill="WHITE" />
-      <Label alignment="CENTER" layoutX="687.0" layoutY="249.0" prefHeight="15.0" prefWidth="249.0" text="* 아래 3가지 입력시 입장이 가능합니다. *" textFill="WHITE" />
+      <TextField fx:id="txtmsg" layoutX="84.0" layoutY="571.0" onAction="#msg" prefHeight="62.0" prefWidth="409.0" />
       <ImageView fitHeight="115.0" fitWidth="222.0" layoutX="707.0" layoutY="109.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../img/레트로%20아케이드.png" />
          </image>
       </ImageView>
+      <TableView fx:id="roomtable" layoutX="671.0" layoutY="280.0" prefHeight="174.0" prefWidth="295.0">
+        <columns>
+          <TableColumn prefWidth="53.0" text="방번호" />
+          <TableColumn prefWidth="172.0" text="방이름" />
+            <TableColumn prefWidth="69.0" text="인원" />
+        </columns>
+      </TableView>
+      <TextField fx:id="txtroomname" layoutX="671.0" layoutY="219.0" prefHeight="33.0" prefWidth="222.0" promptText="개설할 방의 이름" />
+      <Button fx:id="btnadd" layoutX="898.0" layoutY="219.0" mnemonicParsing="false" onAction="#add" prefHeight="33.0" prefWidth="63.0" text="방 개설">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Button>
+      <Label fx:id="lblselect" layoutX="671.0" layoutY="258.0" text="현재 선택된 방의 이름 :" textFill="WHITE">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="671.0" layoutY="464.0" text="회원 목록" textFill="WHITE">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <TextArea fx:id="txtmidlist" layoutX="671.0" layoutY="495.0" prefHeight="139.0" prefWidth="200.0" />
    </children>
 </AnchorPane>
