--- a/jspweb/src/main/webapp/css/main.css
+++ b/jspweb/src/main/webapp/css/main.css
@@ -1,8 +1,5 @@
 @charset "UTF-8";
-*{
-	
-	background-image: url("https://img.freepik.com/free-vector/flat-comic-style-background_23-2148882944.jpg?w=2000");
-}
+*{font-family: "KOHIBaeumOTF";}
 #success1{
 	background-color: skyblue;
 	margin : 20px;
@@ -14,4 +11,16 @@
 
 	font-size:100px;
 		
+}
+@font-face { /* 웹폰트*/
+	    font-family: 'KOHIBaeumOTF';
+	    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2201-2@1.0/KOHIBaeumOTF.woff') format('woff');
+	    font-weight: normal;
+	    font-style: normal;
+}
+li{ list-style-type: none;} /*글머리 제거 */
+a{ text-decoration: none; color: black; } /*밑줄제거 색상변경*/
+a:hover{ color: gold; }
+.carousel-item img{
+	width: 100%;
 }
