--- a/jspweb/src/main/webapp/css/main.css
+++ b/jspweb/src/main/webapp/css/main.css
@@ -24,3 +24,41 @@ a:hover{ color: gold; }
 .carousel-item img{
 	width: 100%;
 }
+
+#qwer{
+	background-color: skyblue;
+	
+	
+}
+
+
+#footer{
+	width: 100%;
+	height: 150px;
+	clear : both;
+	background-color: #2c2a29;
+}
+#footer_box{
+	width: 1150px;
+	height:150px;
+	margin: 0 auto;
+}
+#footer_logo{
+	float: left;
+	margin: 50px 0 0 30px;
+}
+#address{
+	float :right;
+	margin : 50px 30px 0px 0px;
+	color : white;
+}
+
+#menus{ float: right; text-align: right; }
+#menus li{ display: inline;}
+#main_menu{margin-top: 10px;}
+#box{ width: 1200px; margin: 0 auto; margin-top: 20px;}
+#logo{ float: left; margin-top:20px;}
+#logo img{width:25%;}
+#main_menu li{
+		font-size: 12px; margin: 10px 10px 10px 12px;
+}
