--- a/jspweb/src/main/webapp/css/main.css
+++ b/jspweb/src/main/webapp/css/main.css
@@ -34,7 +34,7 @@ a:hover{ color: gold; }
 
 #footer{
 	width: 100%;
-	height: 150px;
+	height: 200px;
 	clear : both;
 	background-color: #2c2a29;
 }
@@ -61,4 +61,18 @@ a:hover{ color: gold; }
 #logo img{width:25%;}
 #main_menu li{
 		font-size: 12px; margin: 10px 10px 10px 12px;
+}
+
+.boardlist_title{
+	width : 20%;
+	border-bottom: 1px solid black;
+	padding: 20px;
+	margin: 100px 0px 50px 0px;
+}
+.boardlist_topbtn{
+	margin: 20px 0px;	
+}
+.pagenum{
+	color: black;
+	font-size: 12px;
 }
